much better fix for the center on mobile

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {  
-  /* Fix scroll when 100vh on safari*/
-    height: 100vh;
-    height: -webkit-fill-available;
-    overflow: hidden;
+.center {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
+
